@@ -60,7 +60,7 @@ configuration_save.setIntIndex(2000)\n
 # web site module security\n
 # we will not provide web_site_module for now.\n
 configuration_save.addConfigurationItem("Permission Configurator Item",\n
-                                        filename="module_permission_access.ods")\n
+                                        filename="standard_module_permission_access.ods")\n
 \n
 # Catalog Keyword Search Keys are for now hardcoded.\n
 configuration_save.addConfigurationItem("Catalog Keyword Key Configurator Item",\n
