@@ -83,7 +83,7 @@ for property_dict in context.BusinessConfiguration_getSolverPropertyDict().iterv
 # web site module security\n
 # we will not provide web_site_module for now.\n
 configuration_save.addConfigurationItem("Permission Configurator Item",\n
-                                        filename="module_permission_access.ods")\n
+                                        filename="standard_module_permission_access.ods")\n
 \n
 # Catalog Keyword Search Keys are for now hardcoded.\n
 configuration_save.addConfigurationItem("Catalog Keyword Key Configurator Item",\n
