@@ -12,7 +12,7 @@
         </item>
         <item>
             <key> <string>__name__</string> </key>
-            <value> <string>module_permission_access.ods</string> </value>
+            <value> <string>standard_module_permission_access.ods</string> </value>
         </item>
         <item>
             <key> <string>content_type</string> </key>
@@ -184,7 +184,7 @@ AO4DAADfHQAAAAA=</string> </value>
         </item>
         <item>
             <key> <string>title</string> </key>
-            <value> <string>module_permission_access.ods</string> </value>
+            <value> <string></string> </value>
         </item>
       </dictionary>
     </pickle>
