@@ -1,4 +1,7 @@
 2011-04-01 lucas
+* Renamed  module_permission_access.ods to standard_module_permission_access.ods
+
+2011-04-01 lucas
 * Renamed default_accounts_express.ods to standard_default_accounts.ods
 
 2011-04-01 lucas
